--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "simple_cells"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["GitHub:CLandel89"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossbeam = "*"
 sdl2 = { version = "*", features = ["image"] }
 json = "*"
+opencl3 = "0.5.2"
