--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["GitHub:CLandel89"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.19"
 sdl2 = { version = "*", features = ["image"] }
 json = "*"
 opencl3 = "0.5.2"
